# base_sendfy

./: .replit  Pasted--DOCTYPE-html-html-lang-pt-BR-head-meta-charset-utf-8-meta-content-width-devi-1730485445112.txt  Pasted--DOCTYPE-html-html-lang-pt-BR-head-meta-charset-utf-8-meta-content-width-devi-1730486663105.txt  Pasted--html-head-title-SendFy-Dashboard-title-script-src-https-cdn-tailwindcss-com-sc-1731392289725.txt  Pasted--html-head-title-SendFy-Dashboard-title-script-src-https-cdn-tailwindcss-com-sc-1731399000804.txt  Pasted--html-head-title-SendFy-Dashboard-title-script-src-https-cdn-tailwindcss-com-sc-1731400538510.txt  Pasted--html-lang-pt-BR-head-meta-charset-utf-8-meta-content-width-device-width-initia-1730468824302.txt  Pasted--html-lang-pt-BR-head-meta-charset-utf-8-meta-content-width-device-width-initia-1730934497536.txt  Pasted--html-lang-pt-BR-head-meta-charset-utf-8-meta-content-width-device-width-initia-1730947483977.txt  Pasted--php-Receber-os-dados-do-checkout-data-json-decode-file-get-contents-php-input-true--1730427770665.txt  Pasted--php-curl-curl-init-curl-setopt-array-curl-array-CURLOPT-URL-CURLOPT-RETURNTR-1730425188989.txt  Pasted-Starting-SMS-Platform-services-start-sh-line-38-sys-kernel-mm-transparent-hugepage-enabled-Re-1731078848332.txt  Procfile  app.py  celery_worker.py  cleanup.sh  database.py  dump.rdb  init_admin.py  main.py  migrate_data.py  pyproject.toml  replit.nix  requirements.txt  start.sh  tailwind.config.js
appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
data/: campaigns.json  integrations.json  (+5 more)
(+28 files in other folders)
